generate a new game added
